Fixed mixin font-size 'normal' default parameters was invalid because was wrapped in quotes.

--- a/src/tools/_mixin.font-size.scss
+++ b/src/tools/_mixin.font-size.scss
@@ -5,7 +5,7 @@
 /// @param {bool} $important [false]
 /// ----------------------------------------------------------------------------
 
-@mixin font-size($font-size, $line-height: 'normal', $important: false) {
+@mixin font-size($font-size, $line-height: normal, $important: false) {
 
   @if (type-of($font-size) == number) {
     @if (unit($font-size) != "px") {
